Fix heading padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -299,6 +299,7 @@ main {
 
   h1 {
     font-size: 32px;
+    padding: 0 20px;
   }
 
   .logo {
